# VaultBreaker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  vaultbreaker.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
tests/: test_cli.py
vaultbreaker/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logger.py  models.py
vaultbreaker/data/: __init__.py
vaultbreaker/modules/: __init__.py  base.py  credextract.py  elastic.py  exfil.py  mongo.py  redis.py  sqli.py
vaultbreaker/utils/: __init__.py
