[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "vaultbreaker-framework"
version = "2.0.0"
description = "Database offensive framework for authorized red team engagements"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "arkanzasfeziii"}]
[project.scripts]
vaultbreaker = "vaultbreaker.cli:main"
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
